# mini-service-products

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 37961ae1533a_add_description_to_product.py  c4b4726d6e8a_add_neues_feld_to_product.py
app/: __init__.py  crud.py  database.py  main.py  models.py
tests/: .env.test  conftest.py  test_products.py
